# polar-oauth-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example.env  pyproject.toml
.github/workflows/: deployment.yaml
src/: cli.py  context.py  migrations.py  models.py  settings.py  web.py
src/clients/base/: client.py  contexts.py  decorators.py  descriptors.py  fields.py  models.py  protocols.py  traits.py  types.py
src/clients/polar/: __init__.py  auth.py  base.py  client.py  contexts.py  fields.py  models.py  typing.py
src/core/: context.py  migrations.py  models.py  settings.py
tests/: conftest.py  test_client.py  test_views.py
